<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Likes</string>
    <string name="description_image_pencil" translatable="false">Pencil</string>
    <string name="description_image_cancel">Cancel</string>
    <string name="description_post_reposts">Reposts</string>
    <string name="description_post_views">Views</string>
    <string name="description_post_save">Save</string>
    <string name="temp_likes" translatable="false">1009</string>
    <string name="temp_reposts" translatable="false">12</string>
    <string name="temp_views" translatable="false">6</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_message">Edit message</string>
    <string name="chooser_share_post">Share post</string>
    <string name="OK" translatable="false">OK</string>
    <string name="add_post">Add post</string>
    <string name="error_no_youtube_link">No youtube link</string>
    <string name="channel_name">Notifications</string>
    <string name="like_notification">User %1$s liked %2$s\'s post</string>
    <string name="share_notification">User %1$s shared %2$s\'s post</string>
    <string name="newPost_notification">User %1$s posted a new post</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="new_posts">New Posts</string>
    <string name="there_s_no_posts">There\'s no posts</string>
    <string name="save_post">Сохранить</string>
    <string name="clear">Clear</string>
    <string name="image_picker_error" translatable="false">image_picker_error\n</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm_pass">Confirm pass</string>
</resources>